- Fixes days off calendar view - Fixes back button alignment

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -317,7 +317,9 @@ body{
   .back {
     font-size: 1.3em;
     a{
+      margin-top: 0.7em;
       padding-left: 0;
+      display: block;
     }
     i{
       margin-left: -2em;
